--- a/SwtBinding/pom.xml
+++ b/SwtBinding/pom.xml
@@ -9,7 +9,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.arc4eclipse</groupId>
-			<artifactId>RepositoryFacard</artifactId> 
+			<artifactId>RepositoryFacard</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>compile</scope>
@@ -17,8 +17,13 @@
 		<dependency>
 			<groupId>org.arc4eclipse</groupId>
 			<artifactId>swt</artifactId>
-			<version>1.0.0</version> 
-		</dependency> 
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>swt</groupId>
+			<artifactId>jface</artifactId>
+			<version>3.0.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.sonatype.tycho</groupId>
 			<artifactId>org.eclipse.jdt.core</artifactId>
