--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<module>SwtBinding</module>
 		<module>SelectedArtefactPanel</module>
 		<module>PanelExerciser</module>
+		<module>JarScanPanel</module>
 	</modules> 
 
 	<build>
