Adding Futures helper class

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<properties>
 		<org.springframework.version>3.0.5.RELEASE</org.springframework.version>
 	</properties>
-	
+
 	<repositories>
 		<repository>
 			<id>helios</id>
@@ -33,7 +33,7 @@
 		<module>SwtBasics</module>
 		<module>SwtBinding</module>
 		<module>Utilities</module>
-	</modules> 
+	</modules>
 
 	<build>
 		<pluginManagement>
@@ -46,7 +46,40 @@
 						<target>1.6</target>
 					</configuration>
 				</plugin>
+				 <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>org.arc4eclipse.BindingListAndPanel</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+				<plugin>
+					<groupId>org.dstovall</groupId>
+					<artifactId>onejar-maven-plugin</artifactId>
+					<version>1.4.4</version>
+					<executions>
+						<execution>
+							<configuration>
+								<!-- Optional -->
+								<onejarVersion>0.97</onejarVersion>
+								
+								<!-- Optional, default is false -->
+								<attachToBuild>true</attachToBuild>
+								<!-- Optional, default is "onejar" -->
+								<classifier>onejar</classifier>
+							</configuration>
+							<goals>
+								<goal>one-jar</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
 			</plugins>
+
 		</pluginManagement>
 	</build>
 	<dependencies>
@@ -58,4 +91,10 @@
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>onejar-maven-plugin.googlecode.com</id>
+			<url>http://onejar-maven-plugin.googlecode.com/svn/mavenrepo</url>
+		</pluginRepository>
+	</pluginRepositories>
 </project>
