--- a/SwtBasics/pom.xml
+++ b/SwtBasics/pom.xml
@@ -6,11 +6,37 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>SwtBasics</artifactId>
+	<profiles>
+		<profile>
+			<id>mac</id>
+			<activation>
+				<os>
+					<name>mac os x</name>
+				</os>
+			</activation>
+			<properties>
+				<swt.groupId>org.eclipse.swt.carbon</swt.groupId>
+				<swt.artifactId>macosx</swt.artifactId>
+			</properties>
+		</profile>
+		<profile>
+			<id>windows</id>
+			<activation>
+				<os>
+					<family>windows</family>
+				</os>
+			</activation>
+			<properties>
+				<swt.groupId>org.eclipse.swt.win32.win32</swt.groupId>
+				<swt.artifactId>x86</swt.artifactId>
+			</properties>
+		</profile>
+	</profiles>
 	<dependencies>
 		<dependency>
-			<groupId>org.arc4eclipse</groupId>
-			<artifactId>swt</artifactId>
-			<version>1.0.0</version>
+			<groupId>${swt.groupId}</groupId>
+			<artifactId>${swt.artifactId}</artifactId>
+			  <version>3.2.1-v3235</version>
 		</dependency>
 		<dependency>
 			<groupId>swt</groupId>
@@ -27,12 +53,12 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
 		</dependency>
-		<dependency>
+	 	<dependency>
 			<groupId>org.arc4eclipse</groupId>
 			<artifactId>Utilities</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>compile</scope>
-		</dependency>
+		</dependency> 
 	</dependencies>
 </project>
