Playing with the eclipse plugin

--- a/SwtBinding/pom.xml
+++ b/SwtBinding/pom.xml
@@ -7,11 +7,7 @@
 	</parent>
 	<artifactId>SwtBinding</artifactId>
 	<dependencies>
-		<dependency>
-			<groupId>org.arc4eclipse</groupId>
-			<artifactId>swt</artifactId>
-			<version>1.0.0</version>
-		</dependency>
+
 		<dependency>
 			<groupId>swt</groupId>
 			<artifactId>jface</artifactId>
@@ -30,6 +26,13 @@
 		<dependency>
 			<groupId>org.arc4eclipse</groupId>
 			<artifactId>Arc4EclipseRepository</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.arc4eclipse</groupId>
+			<artifactId>SwtBasics</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>compile</scope>
