--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
 		<tycho-version>0.12.0</tycho-version>
 		<platform-version-name>indigo</platform-version-name>
 		<eclipse-site>http://download.eclipse.org/releases/${platform-version-name}</eclipse-site>
+		<manifest-location>META-INF</manifest-location>
 	</properties>
-	
+
 	<profiles>
 		<profile>
 			<id>mac</id>
@@ -39,7 +40,7 @@
 			</properties>
 		</profile>
 	</profiles>
-	
+
 	<repositories>
 		<!-- <repository> <id>installJars</id> <layout>default</layout> <url>file://${project.basedir}/../lib</url> </repository> -->
 		<repository>
@@ -60,6 +61,7 @@
 		<module>SwtBasics</module>
 		<module>SwtBinding</module>
 		<module>Utilities</module>
+		<module>MakeJarForPlugIn</module>
 	</modules>
 
 	<build>
