More work removing Maven. This is the AllTests code plus an ant script that makes a jar

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
 		<module>SwtBinding</module>
 		<module>Utilities</module>
 		<module>MakeJarForPlugIn</module>
+		<module>AllTests</module>
 	</modules>
 
 	<build>
