--- a/Arc4EclipseCorePlugin/.project
+++ b/Arc4EclipseCorePlugin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Arc4EclipseCorePlugin</name>
+	<name>CorePlugin</name>
 	<comment></comment>
 	<projects>
 	</projects>
