--- a/SelectedArtefactPlugin/plugin.xml
+++ b/SelectedArtefactPlugin/plugin.xml
@@ -9,11 +9,25 @@
             id="org.arc4eclipse">
       </category>
       <view
-            name="Arc4Eclipse"
+            name="Arc - Jar"
             icon="icons/sample.gif"
             category="org.arc4eclipse"
-            class="org.arc4eclipse.selectedArtifactPlugin.views.SelectedArtifactView"
-            id="org.arc4eclipse.selectedartefactplugin.views.SampleView">
+            class="org.arc4eclipse.selectedArtifactPlugin.views.SelectedJarView"
+            id="org.arc4eclipse.selectedArtifactPlugin.selectedJarView">
+      </view>
+      <view
+            name="Arc - Org"
+            icon="icons/sample.gif"
+            category="org.arc4eclipse"
+            class="org.arc4eclipse.selectedArtifactPlugin.views.SelectedOrganisationView"
+            id="org.arc4eclipse.selectedArtifactPlugin.selectedOrganisationView">
+      </view>
+      <view
+            name="Arc - Proj"
+            icon="icons/sample.gif"
+            category="org.arc4eclipse"
+            class="org.arc4eclipse.selectedArtifactPlugin.views.SelectedProjectView"
+            id="org.arc4eclipse.selectedArtifactPlugin.selectedProjectView">
       </view>
    </extension>
    <extension
@@ -24,7 +38,19 @@
                ratio="0.5"
                relative="org.eclipse.ui.views.TaskList"
                relationship="right"
-               id="org.arc4eclipse.selectedartefactplugin.views.SampleView">
+               id="org.arc4eclipse.selectedArtifactPlugin.selectedJarView">
+         </view>
+         <view
+               ratio="0.5"
+               relative="org.eclipse.ui.views.TaskList"
+               relationship="right"
+               id="org.arc4eclipse.selectedArtifactPlugin.selectedOrganisationView">
+         </view>
+         <view
+               ratio="0.5"
+               relative="org.eclipse.ui.views.TaskList"
+               relationship="right"
+               id="org.arc4eclipse.selectedArtifactPlugin.selectedProjectView">
          </view>
       </perspectiveExtension>
    </extension>
