--- a/Externals/.classpath
+++ b/Externals/.classpath
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/cake-forkjoin-0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/cake-forkjoin-0.1.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://Program Files/Java/jdk1.6.0_24/src.zip"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-api-1.1.jar"/>
