--- a/DisplayOrganisation/.project
+++ b/DisplayOrganisation/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DisplayOrganisationUrl</name>
+	<name>DisplayUrl</name>
 	<comment></comment>
 	<projects>
 	</projects>
