--- a/Externals/.classpath
+++ b/Externals/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/cake-forkjoin-0.1.jar">
+	<classpathentry exported="true" kind="lib" path="lib/cake-forkjoin-0.1.jar" sourcepath="C:/Users/Phil/.m2/repository/org/codehaus/cake/forkjoin/cake-forkjoin/0.1/cake-forkjoin-0.1-sources.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="http://Program Files/Java/jdk1.6.0_24/src.zip"/>
+			<attribute name="javadoc_location" value="http://www.jarvana.com/jarvana/view/org/codehaus/cake/forkjoin/cake-forkjoin/0.1/cake-forkjoin-0.1-javadoc.jar!"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.4.jar"/>
