--- a/DisplayJarPath/plugin.xml
+++ b/DisplayJarPath/plugin.xml
@@ -3,7 +3,7 @@
 <plugin>
    <extension
          point="org.arc4eclipse.displayers" >
-         <display key="jar" class ="org.arc4eclipse.displayJarPath.DisplayJarPath"/>
+         <display key="jar" class ="org.arc4eclipse.displayJarPath.JarPathDisplayer"/>
    </extension>
 
 </plugin>
