--- a/DisplaySource/.project
+++ b/DisplaySource/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DisplaySource</name>
+	<name>DisplayJavadocAndSource</name>
 	<comment></comment>
 	<projects>
 	</projects>
