--- a/Arc4EclipseCorePlugin/plugin.xml
+++ b/Arc4EclipseCorePlugin/plugin.xml
@@ -28,5 +28,9 @@
       <bundle name ="Basic" class="org.arc4eclipse.swtBasics.images.Images"/>
 </extension>
 
+<extension  point="org.arc4eclipse.bundle">
+      <bundle name ="Core" class="org.arc4eclipse.core.plugin.Plugins"/>
+</extension>
+
 
 </plugin>
