--- a/Arc4EclipseCorePlugin/plugin.xml
+++ b/Arc4EclipseCorePlugin/plugin.xml
@@ -6,6 +6,7 @@
    <extension-point id="org.arc4eclipse.bundle" name="Bundle" />
    <extension-point id="org.arc4eclipse.urlGenerator" name="UrlGenerator" />
    <extension-point id="org.arc4eclipse.repositoryPropogator" name="RepositoryStatusListenerS" />
+   <extension-point id="org.arc4eclipse.displayContainerFactoryConfigurator" name="DisplayContainerFactoryConfigurator" />
 
 <extension  point="org.arc4eclipse.image">
       <image key="Edit" class ="org.arc4eclipse.swtBasics.images.Images"/>
