--- a/DisplayLists/plugin.xml
+++ b/DisplayLists/plugin.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
-   <extension
-         point="org.arc4eclipse.displayers" >
+   <extension point="org.arc4eclipse.displayers" >
          <display key="list" class ="org.arc4eclipse.displayLists.ListDisplayer"/>
    </extension>
-
+	<extension  point="org.arc4eclipse.bundle">
+	      <bundle name ="DisplayLists" class="org.arc4eclipse.displayLists.DisplayListsConstants"/>
+	</extension>
 </plugin>
