--- a/Arc4EclipseCorePlugin/src/main/resources/org/arc4eclipse/core/plugin/Core.properties
+++ b/Arc4EclipseCorePlugin/src/main/resources/org/arc4eclipse/core/plugin/Core.properties
@@ -7,7 +7,7 @@ digest.title = Digest
 javadoc.title = Javadoc
 javadoc.tooltip = Javadoc 
 
-organisation.url.title = Organisaton Url
+organisation.url.title = Organisation Url
 organisation.url.tooltip = The home website for the organisation
 organisation.name.title = Name
 organisation.name.tooltip = A human readable name for the organisation
