--- a/DisplayTweets/bin/org/arc4eclipse/displayTweets/DisplayTweets.properties
+++ b/DisplayTweets/bin/org/arc4eclipse/displayTweets/DisplayTweets.properties
@@ -2,3 +2,4 @@ tweets.title = Tweets
 tweets.tooltip = Tweet handles
 tweets.name = Name
 tweets.value = Tweet Handle
+tweets.help.summary = A list of tweet handles
