--- a/Arc4EclipseCorePlugin/plugin.xml
+++ b/Arc4EclipseCorePlugin/plugin.xml
@@ -7,31 +7,19 @@
    <extension-point id="org.arc4eclipse.urlGenerator" name="UrlGenerator" />
    <extension-point id="org.arc4eclipse.repositoryPropogator" name="RepositoryStatusListenerS" />
    <extension-point id="org.arc4eclipse.displayContainerFactoryConfigurator" name="DisplayContainerFactoryConfigurator" />
+   <extension-point id="org.arc4eclipse.lineEditor" name="LineEditor" />
 
 <extension  point="org.arc4eclipse.image">
       <image key="Edit" class ="org.arc4eclipse.swtBasics.images.Images"/>
-</extension>
-<extension  point="org.arc4eclipse.image">
       <image key="Help" class ="org.arc4eclipse.swtBasics.images.Images"/>
-</extension>
-<extension  point="org.arc4eclipse.image">
       <image key="Browse" class ="org.arc4eclipse.swtBasics.images.Images"/>
-</extension>
-<extension  point="org.arc4eclipse.image">
       <image key="Add" class ="org.arc4eclipse.swtBasics.images.Images"/>
-</extension>
-<extension  point="org.arc4eclipse.image">
       <image key="Delete" class ="org.arc4eclipse.swtBasics.images.Images"/>
-</extension>
-<extension  point="org.arc4eclipse.image">
       <image key="Clear" class ="org.arc4eclipse.swtBasics.images.Images"/>
 </extension>
 
 <extension  point="org.arc4eclipse.bundle">
       <bundle name ="Basic" class="org.arc4eclipse.swtBasics.images.Images"/>
-</extension>
-
-<extension  point="org.arc4eclipse.bundle">
       <bundle name ="Core" class="org.arc4eclipse.core.plugin.Plugins"/>
 </extension>
 
