--- a/DisplayLists/bin/org/arc4eclipse/displayLists/DisplayLists.properties
+++ b/DisplayLists/bin/org/arc4eclipse/displayLists/DisplayLists.properties
@@ -1,6 +1,8 @@
-Name.title = Name
-Value.title = Value
-Url.title = Url
+nameAndValueLineEditor.name.title = Name
+nameAndValueLineEditor.value.title = Value
+
+nameAndUrlLineEditor.name.title = Name
+nameAndUrlLineEditor.value.title = Url
 
 mailingLists.row.help.summary = One of the mailing lists for this project
 tutorials.row.help.summary = One of the tutorials for this project
