--- a/DisplaySource/plugin.xml
+++ b/DisplaySource/plugin.xml
@@ -1,26 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
-   <extension
-         point="org.arc4eclipse.displayers" >
+   <extension  point="org.arc4eclipse.displayers" >
          <display key="src" class ="org.arc4eclipse.displayJavadocAndSource.SourceDisplayer"/>
-   </extension>
-   <extension
-         point="org.arc4eclipse.displayers" >
          <display key="javadoc" class ="org.arc4eclipse.displayJavadocAndSource.JavadocDisplayer"/>
    </extension>	
+
    <extension  point="org.arc4eclipse.image">
 	      <image key="Javadoc" class="org.arc4eclipse.displayJavadocAndSource.JavadocDisplayer"/>
-	</extension>
-   <extension  point="org.arc4eclipse.image">
 	      <image key="Source" class="org.arc4eclipse.displayJavadocAndSource.SourceDisplayer"/>
-	</extension>
-   <extension  point="org.arc4eclipse.image">
 	      <image key="Javadoc.link" class="org.arc4eclipse.displayJavadocAndSource.DisplayJavadocConstants"/>
-	</extension>
-   <extension  point="org.arc4eclipse.image">
 	      <image key="Source.link" class="org.arc4eclipse.displayJavadocAndSource.DisplayJavadocConstants"/>
 	</extension>
+
 	<extension  point="org.arc4eclipse.bundle">
 	      <bundle name="JavadocAndSource" class="org.arc4eclipse.displayJavadocAndSource.SourceDisplayer"/>
 	</extension>
