--- a/DisplayJarPath/plugin.xml
+++ b/DisplayJarPath/plugin.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
-   <extension
-         point="org.softwareFm.displayers" >
+   <extension  point="org.softwareFm.displayers" >
          <display key="jar" class ="org.softwareFm.displayJarPath.JarPathDisplayer"/>
+         <display key="jarSummary" class ="org.softwareFm.displayJarPath.JarSummaryPathDisplayer"/>
    </extension>
+   
    <extension  point="org.softwareFm.bundle">
       <bundle name="DisplayJar" class="org.softwareFm.displayJarPath.DisplayJarConstants"/>
    </extension>
+   
    <extension  point="org.softwareFm.image">
       <image key="Jar" class ="org.softwareFm.displayJarPath.DisplayJarConstants"/>
    </extension>
