--- a/DisplayTweets/src/main/resources/org/softwareFm/displayTweets/DisplayTweets.properties
+++ b/DisplayTweets/src/main/resources/org/softwareFm/displayTweets/DisplayTweets.properties
@@ -3,3 +3,7 @@ tweets.tooltip = Tweet handles
 tweets.name = Name
 tweets.value = Tweet Handle
 tweets.help.summary = A list of tweet handles
+
+displayTweetLineEditor.name.title = Tweet
+tweets.row.help.summary = A single tweet
+
