--- a/DisplaySource/bin/org/softwareFm/displayJavadocAndSource/JavadocAndSource.properties
+++ b/DisplaySource/bin/org/softwareFm/displayJavadocAndSource/JavadocAndSource.properties
@@ -1,8 +1,15 @@
-javadoc.repository.title = Javadoc/Remote
+javadoc.repository.title = Javadoc
 javadoc.repository.help.summary = The location of the javadoc as determined by the crowd sourced database
-javadoc.local.title = Javadoc/Local
-javadoc.local.help.summary = The location of the javadoc as determined by your eclipse
 javadoc.link.tooltip = Press this to link your eclipse to the crowd sourced value
+javadoc.softwareFm.notPresent = No value in SoftwareFM
+javadoc.eclipse.notPresent = No value set in eclipse
+javadoc.repository.title = Repository Value
+javadoc.eclipse.title = Eclipse Value
+
+reconciliation.copyToRepository = Copy to Repository
+reconciliation.copyToEclipse= Copy to Eclipse
+reconciliation.clearEclipse = Clear eclipse
+reconciliation.cancel = Cancel
 
 
 source.repository.title = Source/Remote
@@ -10,3 +17,5 @@ source.repository.help.summary = The location of the source as determined by the
 source.local.title = Source/Local
 source.local.help.summary = The location of the source as determined by your eclipse
 source.link.tooltip = Press this to link your eclipse to the crowd sourced value
+source.softwareFm.notPresent = No value set in SoftwareFm
+source.eclipse.notPresent = No value set in eclipse
