--- a/DisplaySource/plugin.xml
+++ b/DisplaySource/plugin.xml
@@ -7,10 +7,10 @@
    </extension>	
 
    <extension  point="org.softwareFm.image">
-	      <image key="Javadoc" class="org.softwareFm.displayJavadocAndSource.JavadocDisplayer"/>
-	      <image key="Source" class="org.softwareFm.displayJavadocAndSource.SourceDisplayer"/>
-	      <image key="Javadoc.link" class="org.softwareFm.displayJavadocAndSource.DisplayJavadocConstants"/>
-	      <image key="Source.link" class="org.softwareFm.displayJavadocAndSource.DisplayJavadocConstants"/>
+	      <image key="javadoc" class="org.softwareFm.displayJavadocAndSource.JavadocDisplayer"/>
+	      <image key="source" class="org.softwareFm.displayJavadocAndSource.SourceDisplayer"/>
+	      <image key="javadoc.link" class="org.softwareFm.displayJavadocAndSource.DisplayJavadocConstants"/>
+	      <image key="source.link" class="org.softwareFm.displayJavadocAndSource.DisplayJavadocConstants"/>
 	</extension>
 
 	<extension  point="org.softwareFm.bundle">
