Tweaks to get Source and Javadoc looking better

--- a/DisplaySource/src/main/resources/org/softwareFm/displayJavadocAndSource/JavadocAndSource.properties
+++ b/DisplaySource/src/main/resources/org/softwareFm/displayJavadocAndSource/JavadocAndSource.properties
@@ -12,10 +12,11 @@ reconciliation.clearEclipse = Clear eclipse
 reconciliation.cancel = Cancel
 
 
-source.repository.title = Source/Remote
-source.repository.help.summary = The location of the source as determined by the crowd sourced database
-source.local.title = Source/Local
+source.title = Source
+source.help.summary = The location of the source as determined by the crowd sourced database
 source.local.help.summary = The location of the source as determined by your eclipse
 source.link.tooltip = Press this to link your eclipse to the crowd sourced value
 source.softwareFm.notPresent = No value set in SoftwareFm
 source.eclipse.notPresent = No value set in eclipse
+source.repository.title = Repository Value
+source.eclipse.title = Eclipse Value
