--- a/SwtBasics/build.properties
+++ b/SwtBasics/build.properties
@@ -1,6 +1,7 @@
 source.. = src/main/java/,\
            src/test/java/,\
-           src/main/resources/
+           src/main/resources/,\
+           src/test/resources/
 output.. = bin/
 bin.includes = META-INF/,\
                .
