--- a/DisplaySource/plugin.xml
+++ b/DisplaySource/plugin.xml
@@ -9,8 +9,8 @@
    <extension  point="org.softwareFm.image">
 	      <image key="javadoc" class="org.softwareFm.displayJavadocAndSource.JavadocDisplayer"/>
 	      <image key="source" class="org.softwareFm.displayJavadocAndSource.SourceDisplayer"/>
-	      <image key="javadoc.link" class="org.softwareFm.displayJavadocAndSource.DisplayJavadocConstants"/>
-	      <image key="source.link" class="org.softwareFm.displayJavadocAndSource.DisplayJavadocConstants"/>
+	      <image key="javadoc.link" class="org.softwareFm.displayJavadocAndSource.JavadocSourceConstants"/>
+	      <image key="source.link" class="org.softwareFm.displayJavadocAndSource.JavadocSourceConstants"/>
 	</extension>
 
 	<extension  point="org.softwareFm.bundle">
