--- a/DisplaySource/src/main/resources/org/softwareFm/displayJavadocAndSource/JavadocAndSource.properties
+++ b/DisplaySource/src/main/resources/org/softwareFm/displayJavadocAndSource/JavadocAndSource.properties
@@ -1,3 +1,7 @@
+javadocSource.noValueInRepository = No value in Software FM
+javadocSource.noValueInEclipse = No value in Eclipse
+
+
 javadoc.title = Javadoc
 javadoc.help.summary = The location of the javadoc as determined by the crowd sourced database
 javadoc.link.tooltip = Press this to link your eclipse to the crowd sourced value
