--- a/SwtBasics/src/test/resources/org/softwareFm/swtBasics/images/Basic.properties
+++ b/SwtBasics/src/test/resources/org/softwareFm/swtBasics/images/Basic.properties
@@ -1,7 +1,4 @@
-Edit.tooltip = Edit
-Delete.tooltip = Delete
-Add.tooltip = Add
-Browse.tooltip = Browse
+edit.tooltip = Edit
 
-Title.title = Title
+title.title = Title
 
